manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: gh-oauth-example
  name: gh-oauth-example-ingress
spec:
  rules:
    - host: gh-oauth-example.ac2c224e-978f-454a-8780-7af4740383ae.k8s.civo.com
      http:
        paths:
          - backend:
              service:
                name: gh-oauth-example
                port:
                  number: 8080
            path: /
            pathType: "Prefix"
